[package]
name = "lambdas-rust"
version = "0.1.0"
authors = ["Gabriele Genta <gabriele.genta@gmail.com>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.2.1"
serde_derive = "1.0.97"
serde = "1.0.97"
simple-error = "0.2.1"
simple_logger = "1.3.0"
log = "0.4.7"
rusoto_core = "0.40.0"
rusoto_secretsmanager = "0.40.0"
futures = "0.1.28"
tokio-core = "0.1.17"
serde_json = "1.0.40"
coinnect = "0.5.12"
failure = "0.1.5"
failure_derive = "0.1.5"

[[bin]]
name = "hello"
path = "lambdas-rust/src/hello.rs"
